@@ -4,7 +4,7 @@
 #view_dash
 {dash_wrap}
 {dash_navi}
-<style>{css}{css_dash}</style>
+<style>{css_dash_quality}{css_dash}</style>
 {dash_body}
 {view_tail}
 
