@@ -4,7 +4,7 @@
 #view_dash_cronlog
 {dash_wrap}
 {dash_navi}
-<style>{css}{css_dash}</style>
+<style>{css_dash_cronlog}{css_dash}</style>
 {dash_cronlog_body}
 {view_tail}
 
@@ -20,5 +20,5 @@
 </div>
 
 
-#css
+#css_dash_cronlog
 .cron {background-color:#000; color:#00FF00; font-family:monospace; font-size:0.85em; line-height:1.2em; padding:40px; }
