@@ -4,7 +4,7 @@
 #view_dash_quality
 {dash_wrap}
 {dash_navi}
-<style>{css}{css_dash}</style>
+<style>{css_dash_quality}{css_dash}</style>
 {dash_quality_body}
 {view_tail}
 
@@ -160,7 +160,7 @@
 	</div>
 </div>
 
-#css
+#css_dash_quality
 .default.more_data			{padding:0 20px; box-sizing:border-box;}
 a.back_link.dash			{color:#bdbdbd; margin-right:20px; margin-top:40px; text-align:right;}
 .note						{font-style:italic; font-weight:initial;}
