@@ -4,7 +4,7 @@
 #view_dash_sluglog
 {dash_wrap}
 {dash_navi}
-<style>{css}{css_dash}</style>
+<style>{css_dash_sluglog}{css_dash}</style>
 {dash_sluglog_body}
 {view_tail}
 
@@ -19,7 +19,7 @@
 </div>
 
 
-#css
+#css_dash_sluglog
 .cron 			{background-color:#000; color:#00FF00; font-family:monospace; font-size:0.85em; line-height:1.2em; padding:40px; }
 .title_pub span	{width:60%; display:inline-block; vertical-align:baseline;}
 a.slug_link		{width:40%; display:inline-block; vertical-align:baseline; text-align:right; font-size:16px;}
