@@ -4,7 +4,7 @@
 #view_dash_slugs
 {dash_wrap}
 {dash_navi}
-<style>{css}{css_dash}</style>
+<style>{css_dash_slugs}{css_dash}</style>
 	<div class="default data">	
 		<div class="title_pub">These datasets are imported from IATI Registry nightly at GMT +0.</div>
 		<table class="pub dataset slugs_list">
@@ -25,7 +25,7 @@
 </tr>
 
 
-#css
+#css_dash_slugs
 table.pub.dataset.slugs_list				{width:100%; max-width:100%; display:table;}
 table.pub.dataset.slugs_list th				{font-weight:bold; border-bottom:1px solid #3d4363;}
 table.pub.dataset.slugs_list th span.note	{display:block; padding:5px 0 0 0; font-weight:normal; font-size:16px; font-style:italic;}
