@@ -468,7 +468,7 @@ Explore
 Backed by dstore and Q, <b>Explore</b> provides a simple interface for users to filter through the vast IATI database.
 
 #^discover_paragraph2_text
-We are always seeking feedback on the intuitiveness and usability of Explore. Send us your feedback by adding a new issue through the <a href="https://github.com/devinit/D-Portal/issues">Github forum</a> or, if you prefer, get in touch through <a href="mailto:support@iatistandard.org?subject=Feedback%20on%20d-portal.org">support@iatistandard.org</a>
+We are always seeking feedback on the intuitiveness and usability of Explore. Send us your feedback by adding a new issue through the <a href="https://github.com/devinit/D-Portal/issues">Github forum</a> or, if you prefer, get in touch via <a href="mailto:support@iatistandard.org?subject=Feedback%20on%20d-portal.org">email</a>.
 
 #^discover_paragraph3_text
 Explore IATI data at <a href="http://www.d-portal.org/ctrack.html#view=search">http://www.d-portal.org/ctrack.html#view=search</a>
